--- a/index.html
+++ b/index.html
@@ -4,20 +4,87 @@
         <meta title="Adgonzalez's Personal Page" />
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
         <title>Adgonzalez's Personal Page</title>
         <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
             crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="/css/index.css" />
     </head>
-    <body>
-        <h1>Comprobamos que funciona</h1>
-		<button type="button" class="btn btn-primary">Primary</button>
+    <body class="background-color-dark">
+        <div
+            class="container w-75 background-color-dark-blue setoff"
+        >
+            <div class="row">
+                <div class="col-12">
+                    <div class="d-flex justify-content-center">
+                        <div class="text-center">
+                            <div class="my-5">
+                                <img
+                                    src="https://avatars.githubusercontent.com/u/101846270?s=400&u=1d5f2ed591171b371ec0db374d1f6b604725e5cd&v=4"
+                                    alt="Profile image"
+                                    class="rounded-circle w-50"
+                                />
+                            </div>
 
-		<p>Añadimos un boton</p>
+                            <h1 class="my-5 color-white">
+                                Antonio David<br />González Peña
+                            </h1>
+                            <div class="row my-3">
+                                <div class="col-6">
+                                    <a
+                                        role="button"
+                                        href="https://www.linkedin.com/in/adgonzalezp/"
+                                        class="btn border-light w-75 rounded-pill color-blue"
+                                    >
+                                        <i class="fa-brands fa-linkedin"></i>
+                                        LinkedIn
+                                    </a>
+                                </div>
+                                <div class="col-6">
+                                    <a
+                                        role="button"
+                                        href="https://github.com/adgonzalezpe"
+                                        class="btn border-light w-75 rounded-pill color-blue"
+                                    >
+                                        <i class="fa-brands fa-github"></i>
+                                        GitHub
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="row my-3">
+                                <div class="col-6">
+                                    <a
+                                        role="button"
+                                        href="#"
+                                        class="btn border-light w-75 rounded-pill color-blue"
+                                    >
+                                        <i class="fa-solid fa-user"></i>
+                                        About me
+                                    </a>
+                                </div>
+                                <div class="col-6">
+                                    <a
+                                        role="button"
+                                        href="mailto:adgonzalezpe@gmail.com"
+                                        class="btn border-light w-75 rounded-pill color-blue"
+                                    >
+                                        <i class="fa-solid fa-envelope"></i>
+                                        Emails
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
     <script
         src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -30,8 +97,14 @@
         crossorigin="anonymous"
     ></script>
     <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"
+    ></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"
+        integrity="sha512-6PM0qYu5KExuNcKt5bURAoT6KCThUmHRewN3zUFNaoI6Di7XJPTMoT6K0nsagZKk2OB4L7E3q1uQKHNHd4stIQ=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
     ></script>
 </html>
