Añadido about me, cambio de diseño y estructura

--- a/index.html
+++ b/index.html
@@ -18,68 +18,137 @@
         <link rel="stylesheet" href="/css/index.css" />
     </head>
     <body class="background-color-dark">
-        <div
-            class="container w-75 background-color-dark-blue setoff"
-        >
+        <div class="container w-75 background-color-dark-purple setoff">
             <div class="row">
                 <div class="col-12">
                     <div class="d-flex justify-content-center">
-                        <div class="text-center">
-                            <div class="my-5">
+                        <div class="col-8">
+                            <div class="row my-5 d-flex justify-content-center">
                                 <img
                                     src="https://avatars.githubusercontent.com/u/101846270?s=400&u=1d5f2ed591171b371ec0db374d1f6b604725e5cd&v=4"
                                     alt="Profile image"
                                     class="rounded-circle w-50"
                                 />
                             </div>
+                            <div class="row my-5">
+                                <h1 class="color-black text-center">
+                                    Antonio David<br />González Peña
+                                </h1>
+                            </div>
 
-                            <h1 class="my-5 color-white">
-                                Antonio David<br />González Peña
-                            </h1>
-                            <div class="row my-3">
-                                <div class="col-6">
+                            <div class="row">
+                                <div class="col-sm-6 col-xs-12 my-2">
                                     <a
                                         role="button"
                                         href="https://www.linkedin.com/in/adgonzalezp/"
-                                        class="btn border-light w-75 rounded-pill color-blue"
+                                        class="btn border-dark w-100 rounded-pill color-blue"
                                     >
                                         <i class="fa-brands fa-linkedin"></i>
                                         LinkedIn
                                     </a>
                                 </div>
-                                <div class="col-6">
+                                <div class="col-sm-6 col-xs-12 my-2">
                                     <a
                                         role="button"
                                         href="https://github.com/adgonzalezpe"
-                                        class="btn border-light w-75 rounded-pill color-blue"
+                                        class="btn border-dark w-100 rounded-pill color-blue"
                                     >
                                         <i class="fa-brands fa-github"></i>
                                         GitHub
                                     </a>
                                 </div>
                             </div>
-                            <div class="row my-3">
-                                <div class="col-6">
+                            <div class="row">
+                                <div class="col-sm-6 col-xs-12 my-2">
                                     <a
                                         role="button"
-                                        href="#"
-                                        class="btn border-light w-75 rounded-pill color-blue"
+                                        href="#about-me"
+                                        class="btn border-dark w-100 rounded-pill color-blue"
                                     >
                                         <i class="fa-solid fa-user"></i>
                                         About me
                                     </a>
                                 </div>
-                                <div class="col-6">
+                                <div class="col-sm-6 col-xs-12 my-2">
                                     <a
                                         role="button"
                                         href="mailto:adgonzalezpe@gmail.com"
-                                        class="btn border-light w-75 rounded-pill color-blue"
+                                        class="btn border-dark w-100 rounded-pill color-blue"
                                     >
                                         <i class="fa-solid fa-envelope"></i>
                                         Emails
                                     </a>
                                 </div>
                             </div>
+                            <div class="row" id="about-me">
+                                <div class="col-12 my-3">
+                                    <hr class="color-black" />
+                                    <p class="color-black pt-3">
+                                        Bienvenidos a mi página personal creada
+                                        en GitHub.
+                                    </p>
+
+                                    <p class="color-black">
+                                        Aquí podréis conocerme un poco más y
+                                        saber en qué proyectos estoy
+                                        involucrado.
+                                    </p>
+                                    <div class="col-sm-12 col-xs-12 my-2">
+                                        <div
+                                            class="d-flex justify-content-center py-3"
+                                        >
+                                            <a
+                                                role="button"
+                                                href="#"
+                                                class="btn border-dark rounded-pill color-blue px-5"
+                                            >
+                                                Proyectos
+                                            </a>
+                                        </div>
+                                    </div>
+
+                                    <p class="color-black">
+                                        Actualmente tengo 25 años, vivo en España
+                                        y desempeño funciones como Backend
+                                        Software Developer. Los lenguajes en los que
+                                        mejor me desenvuelvo son:
+                                    </p>
+									<ul class="list-group list-group py-2">
+										<a href="https://nestjs.com/" target="_blank" class="list-group-item">
+											NestJS (Node.js)
+										</a>
+										<a href="https://expressjs.com/es/" target="_blank" class="list-group-item">
+											Express.js (Node.js)
+										</a>
+										<a href="https://www.typescriptlang.org/" target="_blank" class="list-group-item">
+											TypeScript
+										</a>
+										<a href="https://www.postgresql.org/" target="_blank" class="list-group-item">
+											PostgreSQL
+										</a>
+										<a href="https://www.mysql.com/" target="_blank" class="list-group-item">
+											MySQL
+										</a>
+										<a href="https://www.mongodb.com/es" target="_blank" class="list-group-item">
+											MongoDB
+										</a>
+										<a href="https://swagger.io/" target="_blank" class="list-group-item">
+											Swagger
+										</a>
+										<a href="https://www.docker.com/" target="_blank" class="list-group-item">
+											Docker (Docker-Compose)
+										</a>
+										<a href="https://git-scm.com/" target="_blank" class="list-group-item">
+											Git (Git-Flow)
+										</a>
+									</ul>
+                                </div>
+                            </div>
+							<div class="row" id="about-me">
+                                <div class="col-12 my-3">
+                                    <hr class="color-black" />
+								</div>
+							</div>
                         </div>
                     </div>
                 </div>
